--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "whatsapp-2",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "better-react-spinkit": "^2.0.4",
+    "email-validator": "^2.0.4",
+    "firebase": "^9.0.2",
+    "moment": "^2.29.1",
+    "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "styled-components": "^5.3.1",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "11.1.2"
   }
 }
