--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.2",
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
+    "emoji-picker-react": "^3.4.12",
     "firebase": "9.0.0-beta.8",
     "moment": "^2.29.1",
     "next": "11.1.2",
