--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "antd": "^4.18.2",
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
     "emoji-picker-react": "^3.4.12",
